--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "name": "Cruserbot",
   "description": " Arabic c.r source Powerful & Safe based on Telethon",
-  "logo": "",
+  "logo": "https://telegra.ph/file/9fd0a28073d92e3052fe3.jpg",
   "keywords": [
     "plugin",
     "modular",
