--- a/app.json
+++ b/app.json
@@ -1,5 +1,5 @@
 {
-  "name": "سورس كرستين,
+  "name": "سورس كرستين",
   "description": "اللهم صلِ على محمد وآل محمد",
   "logo": "https://telegra.ph/file/83ee584aef1c4db1d9597.jpg",
   "keywords": [
